@@ -1,125 +1,95 @@
-package com.university.research.framework.security;
+package com.zhiye.backend.security;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * Spring Security配置类
- */
 @Configuration
-@EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationTokenFilter jwtAuthenticationTokenFilter;
+    private final JwtAuthenticationFilter jwtFilter;
+    private final UserDetailsServiceImpl userDetailsService;
 
-    @Autowired
-    private UserDetailsService userDetailsService;
-
-    /**
-     * 密码加密器
-     */
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    /**
-     * 认证提供者
-     */
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
-
-    /**
-     * 认证管理器
-     */
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
-
-    /**
-     * Security过滤器链配置
+        /**
+     * 配置Spring Security过滤器链
+     *
+     * @param http HttpSecurity对象，用于配置安全策略
+     * @return SecurityFilterChain 安全过滤器链
+     * @throws Exception 配置过程中可能抛出的异常
      */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        // 禁用CSRF保护、表单登录和HTTP基本认证
         http
-                // 禁用CSRF（因为使用JWT，不需要CSRF保护）
+                // ✅ 开启 CORS 支持
+                .cors(Customizer.withDefaults())
+                // ✅ 关闭 CSRF（因为我们使用 JWT）
                 .csrf(AbstractHttpConfigurer::disable)
-                // 配置CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // 会话管理：无状态（因为使用JWT）
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // 配置请求授权
+                // ✅ 禁用表单登录（避免 302）
+                .formLogin(AbstractHttpConfigurer::disable)
+                // ✅ 禁用 session
+                .sessionManagement(AbstractHttpConfigurer::disable)
+                // ✅ 放行登录、注册、刷新 token 接口
                 .authorizeHttpRequests(auth -> auth
-                        // 白名单：无需认证的接口
                         .requestMatchers(
-                                "/api/auth/login",           // 登录接口
-                                "/api/auth/register",        // 注册接口（如果有）
-                                "/api/doc.html",             // Knife4j文档
-                                "/api/swagger-ui/**",        // Swagger UI
-                                "/api/v3/api-docs/**",       // OpenAPI文档
-                                "/api/favicon.ico",          // 图标
-                                "/error"                     // 错误页面
+                                "/api/v1/auth/login",
+                                "/api/v1/auth/register",
+                                "/api/v1/auth/refresh",
+                                "/actuator/**",
+                                "/api/v1/user/bookshelf/**",
+                                "/api/v1/books/**"
                         ).permitAll()
-                        // 其他所有请求需要认证
                         .anyRequest().authenticated()
                 )
-                // 设置认证提供者
-                .authenticationProvider(authenticationProvider())
-                // 添加JWT过滤器（在UsernamePasswordAuthenticationFilter之前）
-                .addFilterBefore(jwtAuthenticationTokenFilter, UsernamePasswordAuthenticationFilter.class);
+                // 添加 JWT 过滤器
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);;
 
         return http.build();
     }
-
-    /**
-     * CORS配置
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // 允许的源（前端地址）
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
-        // 允许的HTTP方法
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        // 允许的请求头
-        configuration.setAllowedHeaders(List.of("*"));
-        // 允许携带凭证（如Cookie）
-        configuration.setAllowCredentials(true);
-        // 预检请求的有效期（秒）
-        configuration.setMaxAge(3600L);
+        CorsConfiguration config = new CorsConfiguration();
+
+        // ✅ 允许的前端源（开发时是 http://localhost:5173）
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        // ✅ 允许携带 cookie 或 Authorization header
+        config.setAllowCredentials(true);
+        // ✅ 允许的 HTTP 方法
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // ✅ 允许的请求头
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        // ✅ 暴露的响应头
+        config.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
+
         return source;
     }
-}
 
+    /**
+     * 创建并配置BCrypt密码编码器Bean
+     *
+     * @return BCryptPasswordEncoder实例，用于密码加密和验证
+     */
+
+    @Bean
+    public BCryptPasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+
+}
